--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body{
   line-height: 109px;
   color: #FF0000;
   text-decoration: underline;
+  margin: 40px 0;
 }
 
 .sub-header{
@@ -18,6 +19,7 @@ body{
   font-size: 64px;
   line-height: 85px;
   color: #fff;
+  margin: 40px 0 !important;
 }
 .sub-header2{
   font-family: 'Handlee';
@@ -25,7 +27,6 @@ body{
   font-weight: 400;
   font-size: 48px;
   line-height: 64px;
-  margin: 32px 0 !important;
 }
 .start-btn{
   background: none;
