--- a/src/index.css
+++ b/src/index.css
@@ -41,7 +41,23 @@ body{
   z-index: 2;
 }
 
+.restart-btn{
+  background: none;
+  border: none;
+  color: #fff;
+  font-family: 'Handlee';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 85px;
+  margin-top: 1rem;
+  z-index: 2;
+}
+
 .start-btn:hover{
+  cursor: pointer;
+}
+.restart-btn:hover{
   cursor: pointer;
 }
 
@@ -51,6 +67,13 @@ body{
   right: 0;
   margin: 0 auto;
 }
+
+.vector-img-2{
+  position: absolute;
+  left: -7rem;
+  top: -2rem;
+}
+
 
 .vector-img:hover{
   cursor: pointer;
